# projekt-team_7_hospital

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  HWSE-Hospital_test_include-b12d07c.cmake  HWSE_HOSPITAL  HWSE_Hospital_test  HWSE_Hospital_test_include-b12d07c.cmake  HWSE_Hospital_test_tests-b12d07c.cmake  Makefile  PatientsList.csv  Sam.c  cdr.csv  cmake_install.cmake  csv  csv.c  csv.h  example.csv  main  main.c  main.cpp  output.txt  program  readme.md
include/: csv.h  functions.h
src/: PatientsList.csv  cdr.csv  csv.c  csv.cpp  functions.cpp  functions_MS.c  functions_test.cpp  main  main.c  main.cpp
test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  HWSE_Hospital_test_include-b12d07c.cmake  HWSE_Hospital_test_tests-b12d07c.cmake  Makefile  cmake_install.cmake  csv_test.cpp  main.c
